# gtk4-study

gtk4-libadwaita/01_AdwHeaderBar/: 01_headerbar  01_headerbar.c  01_headerbar.ui
gtk4-libadwaita/02_AdwstatusPage/: 02_statuspage  02_statuspage.c  02_statuspage.ui
gtk4-libadwaita/03_AdwPreferencesGroup/: 03_preference  preference  preference.c  preference.ui  preference1  preference1.c  preference1.ui
gtk4-libadwaita/04_AdwViewSwitcher/: application  application.c  application.ui
gtk4-libadwaita/05_AdwLeaf/: application  application.c  application.ui
gtk4-libadwaita/06_GtkColumnView/: main  main.c
gtk4-libadwaita/07_GtkComboBox/: main  main.c
gtk4-libadwaita/application/: main  main.c  vpf.gresource.xml  vpf_application.c  vpf_application.h  vpf_application_window.c  vpf_application_window.h  vpf_application_window.ui  vpf_page_info.c  vpf_page_info.h  vpf_resources.c
gtk4-libadwaita/application_test/: app.gresource.xml  application  application.c  application.ui  application_bck.cmb  application_bck.ui  resource.c  vpf_camera_list.c  vpf_camera_list.h  vpf_detect_set_list.c  vpf_detect_set_list.h
gtk4-libadwaita/patterns-main/: .gitlab-ci.yml  COPYING  COPYING.MIT  meson.build  org.gnome.Patterns.json
gtk4-libadwaita/patterns-main/data/: meson.build  org.gnome.Patterns.desktop.in  org.gnome.Patterns.gschema.xml  org.gnome.Patterns.metainfo.xml.in
gtk4-libadwaita/patterns-main/data/icons/: meson.build
gtk4-libadwaita/patterns-main/po/: POTFILES  meson.build
gtk4-libadwaita/patterns-main/src/: main.c  meson.build  patterns-application.c  patterns-application.h  patterns-page-info.c  patterns-page-info.h  patterns-page.c  patterns-page.h  patterns-page.ui  patterns-utils.c  patterns-utils.h  patterns-window.c  patterns-window.h  patterns-window.ui  patterns.gresource.xml  style.css
gtk4-libadwaita/patterns-main/src/pages/boxed-lists/: patterns-page-boxed-lists.c  patterns-page-boxed-lists.h  patterns-page-boxed-lists.ui
gtk4-libadwaita/patterns-main/src/pages/controls/: patterns-page-controls.c  patterns-page-controls.h  patterns-page-controls.ui
gtk4-libadwaita/patterns-main/src/pages/stub/: patterns-page-stub.c  patterns-page-stub.h  patterns-page-stub.ui
gtk4-libadwaita/patterns-main/src/pages/utility-pane/: patterns-page-utility-pane.c  patterns-page-utility-pane.h  patterns-page-utility-pane.ui
gtk4-libadwaita/patterns-main/src/pages/view-switcher/: patterns-page-view-switcher.c  patterns-page-view-switcher.h  patterns-page-view-switcher.ui
gtk4-libadwaita/patterns-main/src/pages/welcome/: patterns-page-welcome.c  patterns-page-welcome.h  patterns-page-welcome.ui
gtk4-libadwaita/patterns-main/src/pages/windows/: patterns-page-windows.c  patterns-page-windows.h  patterns-page-windows.ui  patterns-primary-window.c  patterns-primary-window.h  patterns-primary-window.ui
gtk4/01_Application Class/: application  application.c
gtk4/example1/: pr1.c  pr2.c  pr3.c  pr4  pr4.c
gtk4/example10/: app  app.c  app.ui
gtk4/example2/: lb1  lb1.c  lb2.c  lb3.c  lb4.c
gtk4/example3/: tfv1.c  tfv2.c  tfv3.c  tfv4.c
gtk4/example4/: #tfe3.ui#  resources.c  test.txt~  tfe1  tfe1.c  tfe2  tfe2.c  tfe3.gresource.xml  tfe3_r
gtk4/example5/: meson.build  tfe.c  (+1 more)
(+22 files in other folders)
